# cadette

./: .gitignore  Cargo.toml  bump-version.py
.github/workflows/: ci.yml  release.yml
.run/: Run cdt-app (screenshot).run.xml  Run cdt-app.run.xml  Run rmf-app (screenshot).run.xml  Run rmf-app.run.xml  Test workspace.run.xml
app/: Cargo.toml
app/src/: main.rs  prefs.rs
assets/icon/: Cadette.icns
branding/: Cadette Brand Guide.html
crates/core/: Cargo.toml
crates/core/src/: backend.rs  build_graph.rs  document.rs  features.rs  graph.rs  history.rs  lib.rs  regen.rs  selection.rs  sketch.rs  units.rs
crates/core/tests/: regen_cache.rs  replay.rs
crates/interaction/: Cargo.toml
crates/interaction/src/: lib.rs  selection.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: backend.rs  ffi.rs  lib.rs  solids.rs
crates/kernel/src/ffi/: bridge.cpp  bridge.hpp
crates/kernel/tests/: sweep.rs  tessellation.rs  unify.rs
crates/render/: Cargo.toml
crates/render/src/: background.wgsl  camera.rs  edges.wgsl  gizmo.wgsl  lib.rs  pick.wgsl  shader.wgsl  view.rs  viewer.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs  lm.rs  sketch_solve.rs
crates/solver/tests/: sketch_solve.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  theme.rs
docs/: CNAME  README.md  index.html
md/: cadette-project-outline.md
site/: README.md  index.html  styles.css
