[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/kernel",
    "crates/solver",
    "crates/render",
    "crates/interaction",
    "crates/ui",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/chas/Riemanifold"
rust-version = "1.85"

# Shared dependency versions, referenced by member crates with `workspace = true`.
[workspace.dependencies]
rmf-core = { path = "crates/core" }
rmf-kernel = { path = "crates/kernel" }
rmf-solver = { path = "crates/solver" }
rmf-render = { path = "crates/render" }
rmf-interaction = { path = "crates/interaction" }
rmf-ui = { path = "crates/ui" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.dev]
# OCCT + wgpu are heavy at runtime; some optimization keeps the viewport usable
# while still compiling fast enough for iteration.
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
