[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/kernel",
    "crates/solver",
    "crates/render",
    "crates/interaction",
    "crates/ui",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/chas/cadette"
rust-version = "1.85"

# Shared dependency versions, referenced by member crates with `workspace = true`.
[workspace.dependencies]
cdt-core = { path = "crates/core" }
cdt-kernel = { path = "crates/kernel" }
cdt-solver = { path = "crates/solver" }
cdt-render = { path = "crates/render" }
cdt-interaction = { path = "crates/interaction" }
cdt-ui = { path = "crates/ui" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = { version = "0.34", default-features = false }

[profile.dev]
# OCCT + wgpu are heavy at runtime; some optimization keeps the viewport usable
# while still compiling fast enough for iteration.
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
