[package]
name = "rmf-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Riemanifold application shell and entry point."
default-run = "rmf-app"

[dependencies]
rmf-core = { workspace = true }
rmf-kernel = { workspace = true }
rmf-render = { workspace = true }
rmf-ui = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
