[package]
name = "cdt-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cadette application shell and entry point."
default-run = "cdt-app"

[dependencies]
cdt-core = { workspace = true }
cdt-kernel = { workspace = true }
cdt-render = { workspace = true }
cdt-solver = { workspace = true }
cdt-interaction = { workspace = true }
cdt-ui = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
# Native file dialogs for STL export / project save-load.
rfd = "0.15"
# Project files (.cdt): a zip holding the serialized document (+ future imports).
zip = { version = "2", default-features = false, features = ["deflate"] }
serde_json = "1"
egui-phosphor = "0.12.0"

# macOS: rename the app menu ("cdt-app" -> "Cadette") and feed the standard
# About panel a version, matching winit's own objc2 stack (0.5 / 0.2).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSProcessInfo", "NSBundle", "NSString", "NSDictionary"] }
