[package]
name = "cdt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure-Rust domain logic for Cadette: document, history, sketch, features, units. No GPU, no kernel."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
glam = { workspace = true, features = ["serde"] }
