[package]
name = "cdt-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "wgpu viewport: scene buffers, camera, picking, gizmos, overlays."

[dependencies]
cdt-core = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
wgpu = "29"
winit = "0.30"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui-phosphor = "0.12.0"
