[package]
name = "cdt-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "egui panels, contextual toolbars, and the history panel."

[dependencies]
cdt-core = { workspace = true }
egui = { workspace = true }
egui-phosphor = "0.12.0"
